7-Installing Angular Material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -480,5 +480,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<button mat-button color="primary">Primary</button>
+<button mat-button color="accent">Accent</button>
 <router-outlet></router-outlet>
